# weaveffi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/weaveffi-cli/: Cargo.toml
crates/weaveffi-cli/src/: main.rs
crates/weaveffi-core/: Cargo.toml
crates/weaveffi-core/src/: abi.rs  codegen.rs  lib.rs  templates.rs  validate.rs  wasm.rs
crates/weaveffi-gen-android/: Cargo.toml
crates/weaveffi-gen-android/src/: lib.rs
crates/weaveffi-gen-c/: Cargo.toml
crates/weaveffi-gen-c/src/: lib.rs
crates/weaveffi-gen-node/: Cargo.toml
crates/weaveffi-gen-node/src/: lib.rs
crates/weaveffi-gen-swift/: Cargo.toml
crates/weaveffi-gen-swift/src/: lib.rs
crates/weaveffi-ir/: Cargo.toml
crates/weaveffi-ir/src/: ir.rs  lib.rs  parse.rs
crates/weaveffi-node-addon/: Cargo.toml
crates/weaveffi-node-addon/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  intro.md  roadmap.md  samples.md
docs/src/api/: README.md
docs/src/generators/: README.md  android.md  c.md  node.md  swift.md  wasm.md
docs/src/reference/: idl.md  memory-error.md
docs/src/tutorials/: calculator.md
examples/android/: README.md
examples/c/: README.md  main.c
examples/node/: README.md  main.mjs  package.json
examples/swift/: Package.swift  README.md
examples/swift/Sources/App/: main.swift
examples/wasm/: README.md  index.html
samples/calculator/: Cargo.toml  calculator.yml
samples/calculator/src/: lib.rs
