[package]
name = "weaveffi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
weaveffi-core = { path = "../weaveffi-core" }
weaveffi-ir = { path = "../weaveffi-ir" }
camino = { workspace = true }
color-eyre = { workspace = true }
