[package]
name = "weaveffi-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
weaveffi-ir = { path = "../weaveffi-ir" }
anyhow = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
walkdir = { workspace = true }
tera = { workspace = true }
convert_case = { workspace = true }
heck = { workspace = true }
tracing = { workspace = true }
