[package]
name = "weaveffi-gen-android"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
weaveffi-core = { path = "../weaveffi-core" }
weaveffi-ir = { path = "../weaveffi-ir" }
tera = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
convert_case = { workspace = true }
heck = { workspace = true }
tracing = { workspace = true }
